fix overflow text in table ranking

--- a/src/pages/tableranking/tableRanking.scss
+++ b/src/pages/tableranking/tableRanking.scss
@@ -63,13 +63,12 @@
       0 1rem 1rem -0.5rem rgba(black, 0.3);
   }
   .item-level {
-    font-weight: 900;
-    font-size: 1.5rem;
+    font-weight: 700;
+    font-size: 24px;
     margin-bottom: 0.1rem;
   }
   .name {
-    font-size: 1.1rem;
-    margin-bottom: 0.1rem;
+    font-size: 16px;
   }
   .point {
     font-size: 0.8rem;
